added profile page

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -60,3 +60,37 @@
     margin: 32px 16px 16px 16px
 }
 
+/********** PROFILE **********/
+
+.profile-bg {
+    height: 200px;
+     background: linear-gradient(135deg, #30D9FF, #007AFF);
+}
+
+.profile-pic {
+    width: 150px;
+    height: 150px;
+    background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png');
+    border-radius: 50%;
+    background-size: cover;
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 5px 10px 0px rgba(0, 0, 0, .3);
+    
+}
+
+.profile-bump {
+    height: 50px;
+    width: 100%;
+
+}
+
+.profile-title {
+    margin: 0;
+    font-size: 20pt;
+    letter-spacing: 1px;
+    color: #007AFF;
+}
+
