--- a/www/css/app.css
+++ b/www/css/app.css
@@ -18,7 +18,7 @@
 }
 
 .gradient-icon {
-  background: -webkit-linear-gradient(135deg, #30D9FF, #007AFF);
+  background: -webkit-linear-gradient(135deg, #92FE9D, #00C9FF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -62,7 +62,7 @@
 }
 
 .gradient-background {
-  background: linear-gradient(135deg, #30D9FF, #007AFF);
+  background: linear-gradient(135deg, #92FE9D, #00C9FF);
 }
 
 /********** HOME **********/
@@ -96,7 +96,7 @@
 
 .event-swiper .slide-content {
   font-size: 25px;
-  background: linear-gradient(135deg, #30D9FF, #007AFF);
+  background: linear-gradient(135deg, #92FE9D, #00C9FF);
   box-shadow: 0 5px 10px 0px rgba(0, 122, 255, 0.3);
   color: white;
   border-radius: 10px;
@@ -124,7 +124,7 @@
 /********** PROFILE **********/
 .profile-bg {
   height: 200px;
-  background: linear-gradient(135deg, #30D9FF, #007AFF);
+  background: linear-gradient(135deg, #92FE9D, #00C9FF);
 }
 
 .profile-pic {
@@ -149,5 +149,5 @@
   margin: 0;
   font-size: 20pt;
   letter-spacing: 1px;
-  color: #007AFF;
+  color: #00C9FF;
 }
