--- a/www/css/app.css
+++ b/www/css/app.css
@@ -92,27 +92,28 @@
   width: auto;
 }
 
-.event-swiper .slide-content:hover {
-  width: 100%;
-  height: 100%;
-}
-
 .event-swiper .slide-content {
   font-size: 25px;
   color: white;
   background-color: #2245F5;
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
-  margin: 15px;
-  padding: 20px;
+  margin: 32px 16px 16px 16px;
 }
 
-.slide-content-image {
-  background-image: url(https://images05.military.com/sites/default/files/styles/full/public/media/people/2013/05/bobrosspainting.jpg);
+.slide-text {
+  margin: 16px 16px 0 0;
+}
+
+.slide-image {
   background-size: cover;
   background-position: center;
-  height: 100px;
-  border-radius: 7.5px;
+  box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+  margin: 16px;
+  padding-top: 100%;
+  border-radius: 10px;
+  transform: translateY(-32px);
+  margin-bottom: 0;
 }
 
 .slide-content .slide-title {
@@ -123,7 +124,63 @@
 .slide-content p {
   font-size: 12pt;
   opacity: 0.7;
-  margin: 0
+  margin: 0;
+}
+
+.slide-guests {
+  background-color: white;
+  color: black;
+  border-radius: 0 0 10px 10px;
+  padding: 8px 16px 8px 16px;
+  display: flex;
+  align-items: center;
+}
+
+.slide-guests .img {
+  height: 32px;
+  width: 32px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.slide-guests .as {
+  font-size: 15pt;
+  background-color: white;
+  border-radius: 10px;
+  transform: translateY(-30px);
+  padding: 8px 16px 8px 16px;
+  box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.collapsible-toggle {
+  transform: rotate(0);
+  transition: all .2s;
+  transition-delay: .3s;
+}
+
+.active {
+  transform: rotate(180deg);
+  transition-delay: .3s;
+}
+
+.collapsible {
+  height: 0px;
+  overflow: hidden;
+  transition: height .3s;
+}
+
+.expanded {
+  height: 200px
+}
+
+.collapsible-content {
+  height: 100%;
+  background-color: white;
+  padding: 16px;
+  color: black;
+  font-size: 15px;
 }
 
 .searchbar-input-wrap {
