--- a/www/css/app.css
+++ b/www/css/app.css
@@ -299,7 +299,7 @@ img {
 .chat-description {
   margin-top: var(--f7-navbar-height);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-  padding: 16px;
+  padding: 16px 32px;
 }
 
 /********** SCHOOL SEARCH **********/
