--- a/www/css/app.css
+++ b/www/css/app.css
@@ -77,6 +77,14 @@ img {
   border-radius: 50%;
 }
 
+.chip-pic {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+}
+
 /********** PANEL **********/
 .panel-header {
   margin: 0;
