--- a/www/css/app.css
+++ b/www/css/app.css
@@ -3,6 +3,7 @@
   --f7-messagebar-height: 82px;
   --f7-messagebar-border-color: rgba(0, 0, 0, 0);
   --f7-panel-shadow: rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.05) 30%, rgba(0, 0, 0, 0) 100%;
+  --f7-fab-box-shadow: 0 7px 15px -5px rgba(var(--f7-theme-color-rgb), .7);
 }
 
 @font-face {
