--- a/www/css/app.css
+++ b/www/css/app.css
@@ -88,6 +88,10 @@
   -webkit-font-smoothing: antialiased;
 }
 
+ul {
+  background-color: var(--f7-page-bg-color) !important;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -97,14 +101,7 @@
 }
 
 .navbar-home {
-  background-color: rgba(255, 255, 255, .9);
-}
-
-.title {
-  margin: 16px 16px 8px 16px;
-  font-size: 15pt;
-  font-weight: bold;
-  text-transform: capitalize;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .item-link .item-title {
@@ -123,17 +120,21 @@
 }
 
 .card-block {
-  margin: 16px;
-  padding: 8px;
+  margin: 32px;
+  padding: 16px;
   border: .5px solid lightgray;
-  background-color: #f9f9f9;
+  background-color: var(--f7-page-bg-color);
   border-radius: 15px;
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, .05);
   transition: all .2s cubic-bezier(.5, .5, 0, 1);
 }
 
-.card-block * {
-  background-color: #f9f9f9;
+.search-block {
+  margin: 16px;
+  padding: 8px;
+  border: .5px solid lightgray;
+  background-color: var(--f7-page-bg-color);
+  border-radius: 15px;
 }
 
 img {
@@ -155,6 +156,14 @@ img {
 .li-profile-pic {
   width: 100%;
   padding-top: 100%;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+}
+
+.profile-pic-icon {
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
   background-position: center;
   background-size: cover;
@@ -224,14 +233,13 @@ img {
   box-shadow: 0 0 100px rgba(0, 0, 0, .05);
 }
 
-.navbar {
-  background-color: rgba(255, 255, 255, .9);
-  box-shadow: 0 0 40px rgba(0, 0, 0, .05);
-  border-bottom: .5px solid #d1d1d1;
+.theme-dark .messagebar .toolbar-inner {
+  box-shadow: none;
+  background-color: rgba(23, 23, 23, .9);
 }
 
-.navbar::before {
-  display: none;
+.messagebar-area textarea {
+  max-height: 20vh !important;
 }
 
 .button {
@@ -240,6 +248,10 @@ img {
 }
 
 /********** PANEL **********/
+.panel {
+  background-color: var(--f7-page-bg-color);
+}
+
 .panel-header {
   margin: 0;
   padding: 16px;
@@ -433,7 +445,7 @@ img {
 }
 
 .toolbar-home .tab-link-active {
-  color: var(--f7-theme-color);
+  color: var(--f7-theme-color) !important;
   font-weight: bold;
   font-size: 15pt;
 }
@@ -533,15 +545,6 @@ img {
   margin-top: var(--f7-navbar-height);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   padding: 16px 32px;
-}
-
-/********** SCHOOL SEARCH **********/
-.school-attributes {
-  margin-left: 16px;
-}
-
-.school-attributes p {
-  margin: 8px 0;
 }
 
 /********** WELCOME **********/
@@ -673,7 +676,7 @@ img {
 
 .square {
   position: absolute;
-  background-color: white;
+  background-color: var(--f7-page-bg-color);
   width: 50px;
   height: 50px;
   transform: translateX(160%) rotate(45deg);
