--- a/www/css/app.css
+++ b/www/css/app.css
@@ -107,7 +107,6 @@ ul {
 
 .navbar {
   background-color: rgba(255, 255, 255, .9);
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0);
 }
 
 .navbar-home {
@@ -349,6 +348,7 @@ img {
 
 .expanded-card .card-content {
   min-height: 66.66%;
+  padding-bottom: 1px;
   background-color: var(--f7-page-bg-color);
   border-radius: 32px 32px 0 0;
   box-shadow: 0 5px 30px 0px rgba(0, 0, 0, .5);
@@ -480,7 +480,7 @@ img {
   max-width: 300px;
   background-color: var(--f7-card-bg-color);
   border-radius: 15px;
-  padding: 15px;
+  padding: 30px;
   box-shadow: 0 10px 30px -20px rgba(0, 0, 0, .5);
   transition: .5s cubic-bezier(.5, .5, 0, 1);
   -webkit-transform: none;
